@@ -10115,7 +10115,7 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
-          <para>Shark mode: Improved GUI for TaskApplication activity modeling
+          <para>Shark mode: Improved GUI for TaskApplication and SubFlow activity modeling
           (actual-&gt;formal parameters)</para>
         </listitem>
 
