@@ -236,24 +236,14 @@ public class XMLComboPanel extends XMLBasicPanel {
       }
 
       final XMLPanel p = this;
-      jcb.addItemListener(new ItemListener() {
-         public void itemStateChanged(ItemEvent e) {
+      jcb.addActionListener(new ActionListener() {
+         public void actionPerformed(ActionEvent ae) {
             if (getPanelContainer() == null)
                return;
-            getPanelContainer().panelChanged(p, e);
+            getPanelContainer().panelChanged(p, ae);
          }
-
       });
-
       if (isEditable) {
-         jcb.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent ae) {
-               if (getPanelContainer() == null)
-                  return;
-               getPanelContainer().panelChanged(p, ae);
-            }
-         });
-
          jcb.getEditor().getEditorComponent().addKeyListener(new KeyAdapter() {
             public void keyPressed(KeyEvent e) {
                if (getPanelContainer() == null)
