@@ -1,5 +1,8 @@
 ###### TWE 4.8-1 RELEASED ######
 2012-10-18 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: Improved GUI for SubFlow activity modeling (actual->formal parameters)
+
+2012-10-18 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: Email configuration section for workflow process element (used with SMTPEventAuditManager). Nice GUI and XPDL validation.
 
 2012-10-17 Sasa Bojanic <sasaboy@together.at>
